<resources>
    <string name="app_name">MVP</string>
    <string name="app_id">AppId:%s</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="clear_completed">Clear completed</string>
    <string name="refresh">Refresh</string>
    <string name="statistics">Statistics</string>
    <string name="all_tasks">所有任务</string>
    <string name="active_tasks">未完成任务</string>
    <string name="completed_tasks">已完成任务</string>
    <string name="no_all_tasks">暂时没有任务</string>
...
